--- a/css/sass/elements/_links.scss
+++ b/css/sass/elements/_links.scss
@@ -4,12 +4,22 @@
 
 a {
 	color: $colorPrimary;
-	
+
+	&:hover,
+	&:active {
+		outline: 0;
+	}
+	&:active,
 	&:hover, 
 	&:focus {
 		color: $colorHover;
+		text-decoration: underline;
 	}
-	
+	&:focus {	 
+	    outline: thin dotted #333;
+	    outline: 5px auto -webkit-focus-ring-color;
+	    outline-offset: -2px;
+	}
 	p &, 
 	li &, 
 	table &, 
