--- a/css/sass/frameworks/_bootstrap.scss
+++ b/css/sass/frameworks/_bootstrap.scss
@@ -1,6 +1,5 @@
 /*
- * Bootstrap v3.3.7 (http://getbootstrap.com)
- * Copyright 2011-2016 Twitter, Inc.
+ * Modified Bootstrap v3.3.7 (http://getbootstrap.com)
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 
