Farbwert der PalettonDunkelste zu PalettonHellste (Farbkombi ZUV) um ein Byte verändert um den Farbkontrast von 6,97 auf 7,05 zu heben und so WCAG AAA konform zu sein.

--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -111,7 +111,7 @@ $colorPrintMainLinks: $colorText;
 	$PalettonHellste: #dde5f0;
 	$PalettonHeller: #8fb1ef;
 	$PalettonDunkler: #24598f;
-	$PalettonDunkelste: #1f4c7a;
+	$PalettonDunkelste: #1f4b7a;
 	$siegelurl: './img/siegel-zuv-schnitt.png';
 
 }
