Bugfix hard codierter Werte von Agentur

--- a/css/sass/structure/navigation/_menu.scss
+++ b/css/sass/structure/navigation/_menu.scss
@@ -84,7 +84,6 @@
 		> [type=button] {
 			display: block;
 			position: relative;
-		//	@include px2rem($font-size-nav-mainlinks, $font-size-gridbase, $font-size-nav-mainlinks);
 			@include px2rem($font-size-nav-mainlinks);
 			font-weight: bold;
 			padding: 10px 15px;
@@ -327,7 +326,9 @@
 			}
 
 			.nav-flyout {
-				background: url("./img/siegel-zuv-schnitt.png") no-repeat 95% bottom, linear-gradient(to top, #005599 0%, #036 100%);
+
+				background: url($siegelurl) no-repeat 95% bottom, linear-gradient(to top, $colorPrimaryHeroLight 0%, $colorPrimaryHero 100%);
+
 				@media (min-width: $screen-sm) {
 					min-height: 199px;
 				}
