--- a/css/sass/structure/navigation/_menu.scss
+++ b/css/sass/structure/navigation/_menu.scss
@@ -215,6 +215,12 @@
 		}
 	}
 
+	.introtext, .introtext-full, .introthumb {
+	    display: none;
+	    @media (min-width: $screen-sm) {
+		display: block;
+	    }
+	}
 	.introtext-full,
 	.introtext {
 		p {
@@ -222,7 +228,7 @@
 			padding: 20px;
 			margin: 0;
 			color: #fff;
-			opacity: .7;
+			opacity: .8;
 			font-style: normal;
 			font-weight: normal;
 		}
@@ -260,7 +266,7 @@
 
 	figcaption {
 		color: #fff;
-		opacity: 0.7;
+		opacity: 0.8;
 		@include px2rem($font-size-nav-blockquote-cite);
 	}
 
