--- a/css/sass/mixins/_mixins.scss
+++ b/css/sass/mixins/_mixins.scss
@@ -156,6 +156,7 @@ Mixins File for Wordpress Theme FAU
 	@include border-radius(3px);
 	@include px2rem($font-size-textbuttons);
 	
+	color: $colorButton;
 	background: $colorButtonBackground;
 	padding: 6px 10px;
 	text-decoration: none;
@@ -168,6 +169,7 @@ Mixins File for Wordpress Theme FAU
     }
 
 }
+
 
 
 // Set Font Style
