--- a/css/sass/structure/layout/_flex-boxes.scss
+++ b/css/sass/structure/layout/_flex-boxes.scss
@@ -10,7 +10,8 @@
     justify-content: space-between;
     align-items: stretch;
     align-content: flex-start;
-    div, nav {
+    > div, 
+    > nav {
 	flex-grow: 0;
 	flex-shrink: 0;
 	flex-basis: 100%;
