--- a/css/sass/plugins/_fau-person.scss
+++ b/css/sass/plugins/_fau-person.scss
@@ -261,7 +261,7 @@
 }
 
 /* Strukturen Personenshortcode Content */
-
+.sidebar-single,
 .sidebar-inline,
 .startpage-sidebar,
 .portalpage-content,
