--- a/css/sass/plugins/_fau-person.scss
+++ b/css/sass/plugins/_fau-person.scss
@@ -9,12 +9,15 @@
 
 .person {
     h3, h4, h5 {
-	&:hover, &:focus {
+	a {
+	     text-decoration: none;
+	     &:hover, 
+	    &:focus {
 		    text-decoration: underline;
 		}
-		a {
-		     text-decoration: none;
-		}
+	}
+	
+
     }
 	h3 {
 	    @include px2rem($font-size-h3-small);
