--- a/src/sass/structure/header/_header.scss
+++ b/src/sass/structure/header/_header.scss
@@ -1,7 +1,10 @@
 /*-----------------------------------------------------------------------------------*/
 /* Header
 /*-----------------------------------------------------------------------------------*/
- 
+
+// Branding Region
+@import "headerwrap";
+
 // Branding Region
 @import "branding";
 
