--- a/src/sass/structure/hero/_banner.scss
+++ b/src/sass/structure/hero/_banner.scss
@@ -5,11 +5,9 @@
 #hero.hero-banner {
 	    @include radial-gradient-image($colorPrimaryHero, $colorPrimaryHeroLight, url($siegelurl) no-repeat left 95% bottom);
 	    height: auto;
-	    margin-bottom: 30px;
-	    padding: 0;   
 	    
 	    @media (min-width: $screen-sm) {
-		 height: 142px;
+		 max-height: 142px;
 	    }
 	    
 	    .fauorg-kooperation & {
