--- a/src/sass/structure/hero/_breadcrumb.scss
+++ b/src/sass/structure/hero/_breadcrumb.scss
@@ -14,11 +14,16 @@
 	}
 
 	@media (min-width: $screen-sm ) {
+	    max-height: 200px; 
+	    height: 170px;
+	    
+	    
 	    p.presentationtitle,
 	    h1 {
 		padding: 30px 0 10px 0;
 	    }
 	}
+
     }
     .fauorg-kooperation &.hero-small {
 		@include radial-gradient($colorPrimaryHero, $colorPrimaryHeroLight);
